# film-rating-service

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
app/: database.py  dependencies.py  flask_app.py  main.py  migrate.py  security.py  settings.py
app/crud/: base.py  film.py  review.py  user.py
app/models/: film.py  review.py  user.py
app/routers/: film.py  reviews.py  user.py
app/schemas/: film.py  review.py  user.py
tests/: conftest.py  database.py  factories.py  test.db-journal
tests/api/: test_film.py  test_review.py  test_user.py
tests/crud/: test_film.py  test_review.py  test_user.py
tests/misc/: test_dependencies.py  test_security.py
