[tool.poetry]
name = "homework4"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "<1.4.0"
Faker = "^6.6.2"
requests = "^2.25.1"
factory-boy = "^3.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
Flask = "^1.1.2"
Flask-Admin = "^1.5.7"
SQLAlchemy-Utils = "^0.36.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
autoflake = "^1.4"
isort = "^5.7.0"
black = "^20.8b1"
unify = "^0.5"
flake8 = "^3.8.4"
pylint = "^2.7.1"
pytest-deadfixtures = "^2.2.1"
mypy = "^0.812"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
